src/main/java/grammar/armasmParser.java
// Generated from armasm.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class armasmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, SYMBOL=14, ADC=15, ADD=16, CMP=17, 
		MUL=18, SUB=19, LSL=20, LSR=21, MOV=22, B=23, BL=24, BLR=25, BR=26, CBNZ=27, 
		CBZ=28, EQ=29, NE=30, MI=31, PL=32, VS=33, VC=34, GE=35, LT=36, GT=37, 
		LE=38, AL=39, LDP=40, LDPSW=41, LDUR=42, LDRB=43, LDR=44, STR=45, STUR=46, 
		STP=47, INT=48, NEWLINE=49, COMMENT=50, ID=51, WORD=52, WS=53;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_instruction = 2, RULE_reg = 3, RULE_addr = 4, 
		RULE_imm = 5, RULE_op2 = 6, RULE_cc = 7, RULE_string = 8, RULE_label = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "instruction", "reg", "addr", "imm", "op2", "cc", 
			"string", "label"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'X'", "'x'", "'W'", "'w'", "'='", "'['", "']'", "'#'", 
			"'+'", "'-'", "'\"'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "SYMBOL", "ADC", "ADD", "CMP", "MUL", "SUB", "LSL", "LSR", 
			"MOV", "B", "BL", "BLR", "BR", "CBNZ", "CBZ", "EQ", "NE", "MI", "PL", 
			"VS", "VC", "GE", "LT", "GT", "LE", "AL", "LDP", "LDPSW", "LDUR", "LDRB", 
			"LDR", "STR", "STUR", "STP", "INT", "NEWLINE", "COMMENT", "ID", "WORD", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "armasm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public armasmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(armasmParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==WS) {
				{
				{
				setState(20);
				line();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public List<TerminalNode> WS() { return getTokens(armasmParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(armasmParser.WS, i);
		}
		public TerminalNode NEWLINE() { return getToken(armasmParser.NEWLINE, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(armasmParser.COMMENT, 0); }
		public TerminalNode SYMBOL() { return getToken(armasmParser.SYMBOL, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(28);
				label();
				}
			}

			setState(31);
			match(WS);
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADC:
			case ADD:
			case CMP:
			case MUL:
			case SUB:
			case LSL:
			case LSR:
			case MOV:
			case B:
			case BL:
			case BLR:
			case BR:
			case CBNZ:
			case CBZ:
			case LDP:
			case LDRB:
			case LDR:
			case STR:
			case STP:
				{
				setState(32);
				instruction();
				}
				break;
			case SYMBOL:
				{
				{
				setState(33);
				match(SYMBOL);
				setState(34);
				match(WS);
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__11) {
					{
					setState(35);
					string();
					}
				}

				}
				}
				break;
			case WS:
				break;
			default:
				break;
			}
			setState(40);
			match(WS);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(41);
				match(COMMENT);
				}
			}

			setState(44);
			match(WS);
			setState(45);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public TerminalNode ADC() { return getToken(armasmParser.ADC, 0); }
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public TerminalNode ADD() { return getToken(armasmParser.ADD, 0); }
		public Op2Context op2() {
			return getRuleContext(Op2Context.class,0);
		}
		public TerminalNode CMP() { return getToken(armasmParser.CMP, 0); }
		public TerminalNode MUL() { return getToken(armasmParser.MUL, 0); }
		public TerminalNode SUB() { return getToken(armasmParser.SUB, 0); }
		public TerminalNode LSL() { return getToken(armasmParser.LSL, 0); }
		public ImmContext imm() {
			return getRuleContext(ImmContext.class,0);
		}
		public TerminalNode LSR() { return getToken(armasmParser.LSR, 0); }
		public TerminalNode MOV() { return getToken(armasmParser.MOV, 0); }
		public TerminalNode B() { return getToken(armasmParser.B, 0); }
		public TerminalNode ID() { return getToken(armasmParser.ID, 0); }
		public TerminalNode BL() { return getToken(armasmParser.BL, 0); }
		public TerminalNode BLR() { return getToken(armasmParser.BLR, 0); }
		public TerminalNode BR() { return getToken(armasmParser.BR, 0); }
		public TerminalNode CBNZ() { return getToken(armasmParser.CBNZ, 0); }
		public TerminalNode CBZ() { return getToken(armasmParser.CBZ, 0); }
		public CcContext cc() {
			return getRuleContext(CcContext.class,0);
		}
		public TerminalNode LDP() { return getToken(armasmParser.LDP, 0); }
		public AddrContext addr() {
			return getRuleContext(AddrContext.class,0);
		}
		public TerminalNode LDR() { return getToken(armasmParser.LDR, 0); }
		public TerminalNode LDRB() { return getToken(armasmParser.LDRB, 0); }
		public TerminalNode STR() { return getToken(armasmParser.STR, 0); }
		public TerminalNode STP() { return getToken(armasmParser.STP, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				match(ADC);
				setState(48);
				reg();
				setState(49);
				match(T__0);
				setState(50);
				reg();
				setState(51);
				match(T__0);
				setState(52);
				reg();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(ADD);
				setState(55);
				reg();
				setState(56);
				match(T__0);
				setState(57);
				reg();
				setState(58);
				match(T__0);
				setState(59);
				op2();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				match(CMP);
				setState(62);
				reg();
				setState(63);
				match(T__0);
				setState(64);
				op2();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(MUL);
				setState(67);
				reg();
				setState(68);
				match(T__0);
				setState(69);
				reg();
				setState(70);
				match(T__0);
				setState(71);
				reg();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				match(SUB);
				setState(74);
				reg();
				setState(75);
				match(T__0);
				setState(76);
				reg();
				setState(77);
				match(T__0);
				setState(78);
				op2();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				match(LSL);
				setState(81);
				reg();
				setState(82);
				match(T__0);
				setState(83);
				reg();
				setState(84);
				match(T__0);
				setState(87);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
				case T__2:
				case T__3:
				case T__4:
					{
					setState(85);
					reg();
					}
					break;
				case T__8:
					{
					setState(86);
					imm();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				match(LSR);
				setState(90);
				reg();
				setState(91);
				match(T__0);
				setState(92);
				reg();
				setState(93);
				match(T__0);
				setState(94);
				reg();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(96);
				match(MOV);
				setState(97);
				reg();
				setState(98);
				match(T__0);
				setState(99);
				reg();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(101);
				match(B);
				setState(102);
				match(ID);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(103);
				match(BL);
				setState(104);
				match(ID);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(105);
				match(BLR);
				setState(106);
				reg();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(107);
				match(BR);
				setState(108);
				reg();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(109);
				match(CBNZ);
				setState(110);
				reg();
				setState(111);
				match(T__0);
				setState(112);
				match(ID);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(114);
				match(CBZ);
				setState(115);
				reg();
				setState(116);
				match(T__0);
				setState(117);
				match(ID);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(119);
				match(B);
				setState(120);
				cc();
				setState(121);
				match(ID);
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(123);
				match(LDP);
				setState(124);
				reg();
				setState(125);
				match(T__0);
				setState(126);
				reg();
				setState(127);
				match(T__0);
				setState(128);
				addr();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(130);
				match(LDR);
				setState(131);
				reg();
				setState(132);
				match(T__0);
				setState(133);
				reg();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(135);
				match(LDRB);
				setState(136);
				reg();
				setState(137);
				match(T__0);
				setState(138);
				reg();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(140);
				match(STR);
				setState(141);
				reg();
				setState(142);
				match(T__0);
				setState(143);
				addr();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(145);
				match(STP);
				setState(146);
				reg();
				setState(147);
				match(T__0);
				setState(148);
				reg();
				setState(149);
				match(T__0);
				setState(150);
				addr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(armasmParser.INT, 0); }
		public RegContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterReg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitReg(this);
		}
	}

	public final RegContext reg() throws RecognitionException {
		RegContext _localctx = new RegContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_reg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(155);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddrContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(armasmParser.ID, 0); }
		public RegContext reg() {
			return getRuleContext(RegContext.class,0);
		}
		public ImmContext imm() {
			return getRuleContext(ImmContext.class,0);
		}
		public AddrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterAddr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitAddr(this);
		}
	}

	public final AddrContext addr() throws RecognitionException {
		AddrContext _localctx = new AddrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_addr);
		try {
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(T__5);
				setState(158);
				match(ID);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				match(T__6);
				setState(160);
				reg();
				setState(161);
				match(T__0);
				setState(162);
				imm();
				setState(163);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImmContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(armasmParser.INT, 0); }
		public ImmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterImm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitImm(this);
		}
	}

	public final ImmContext imm() throws RecognitionException {
		ImmContext _localctx = new ImmContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_imm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(T__8);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9 || _la==T__10) {
				{
				setState(168);
				_la = _input.LA(1);
				if ( !(_la==T__9 || _la==T__10) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(171);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op2Context extends ParserRuleContext {
		public RegContext reg() {
			return getRuleContext(RegContext.class,0);
		}
		public ImmContext imm() {
			return getRuleContext(ImmContext.class,0);
		}
		public Op2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterOp2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitOp2(this);
		}
	}

	public final Op2Context op2() throws RecognitionException {
		Op2Context _localctx = new Op2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_op2);
		try {
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				reg();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				imm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CcContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(armasmParser.EQ, 0); }
		public TerminalNode NE() { return getToken(armasmParser.NE, 0); }
		public TerminalNode MI() { return getToken(armasmParser.MI, 0); }
		public TerminalNode PL() { return getToken(armasmParser.PL, 0); }
		public TerminalNode VS() { return getToken(armasmParser.VS, 0); }
		public TerminalNode VC() { return getToken(armasmParser.VC, 0); }
		public TerminalNode GE() { return getToken(armasmParser.GE, 0); }
		public TerminalNode LT() { return getToken(armasmParser.LT, 0); }
		public TerminalNode GT() { return getToken(armasmParser.GT, 0); }
		public TerminalNode LE() { return getToken(armasmParser.LE, 0); }
		public TerminalNode AL() { return getToken(armasmParser.AL, 0); }
		public CcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterCc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitCc(this);
		}
	}

	public final CcContext cc() throws RecognitionException {
		CcContext _localctx = new CcContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NE) | (1L << MI) | (1L << PL) | (1L << VS) | (1L << VC) | (1L << GE) | (1L << LT) | (1L << GT) | (1L << LE) | (1L << AL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(armasmParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(armasmParser.WORD, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(T__11);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(180);
				match(WORD);
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(armasmParser.ID, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof armasmListener ) ((armasmListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(188);
			match(ID);
			}
			setState(189);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}